VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc23Down.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][12MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][14.4MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][16MB/s]  [112MB/455.1MB][ 24%][============>                                     ][16MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][16MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][16MB/s]  [152MB/455.1MB][ 33%][================>                                 ][15.2MB/s]  [160MB/455.1MB][ 35%][=================>                                ][14.55MB/s]  [168MB/455.1MB][ 36%][==================>                               ][14MB/s]  [176MB/455.1MB][ 38%][===================>                              ][13.54MB/s]  [184MB/455.1MB][ 40%][====================>                             ][13.14MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][12.8MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][12.5MB/s]  [208MB/455.1MB][ 45%][======================>                           ][11.56MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][11.37MB/s]  [224MB/455.1MB][ 49%][========================>                         ][10.67MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][9.667MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][7.742MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][6.703MB/s]  [256MB/455.1MB][ 56%][============================>                     ][5.953MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][5.388MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][4.945MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][4.667MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][4.571MB/s]  [296MB/455.1MB][ 65%][================================>                 ][4.554MB/s]  [304MB/455.1MB][ 66%][=================================>                ][4.606MB/s]  [312MB/455.1MB][ 68%][==================================>               ][4.657MB/s]  [320MB/455.1MB][ 70%][===================================>              ][4.706MB/s]  [328MB/455.1MB][ 72%][====================================>             ][4.754MB/s]  [336MB/455.1MB][ 73%][====================================>             ][4.8MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][4.845MB/s]  [352MB/455.1MB][ 77%][======================================>           ][4.889MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][4.865MB/s]  [368MB/455.1MB][ 80%][========================================>         ][4.779MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][4.7MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][4.571MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][4.506MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][4.444MB/s]  [408MB/455.1MB][ 89%][============================================>     ][4.387MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][4.202MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][4.077MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][3.823MB/s]  [440MB/455.1MB][ 96%][================================================> ][3.697MB/s]  [448MB/455.1MB][ 98%][=================================================>][3.702MB/s]  [455.1MB/455.1MB][100%][==================================================][3.7MB/s]  [455.1MB/455.1MB][100%][==================================================][3.7MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_24325/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_24325/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
